--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,18 +41,27 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    //dimension dependency
+    //Dimensions dependency
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
 
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
 
-    //=================Firebase================
+    // <=============================Firebase============================>
 
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics'
+    //authentication
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
+    //real-time database
+    implementation 'com.google.firebase:firebase-database:20.0.4'
+    //cloud-storage database
+    implementation 'com.google.firebase:firebase-storage:20.0.1'
+    //cloud-messaging
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.1.2'
+
 
 }
