login and forgot password commits

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+
     //Dimensions dependency
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
@@ -62,6 +63,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.0.1'
     //cloud-messaging
     implementation 'com.google.firebase:firebase-messaging-ktx:23.1.2'
+
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
 
 
 }
