--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,9 @@ dependencies {
     
     // circular image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.15.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
+
 }
