--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.RoomRental"
         tools:targetApi="31">
         <activity
+            android:name=".EditPropertyActivity"
+            android:exported="false" />
+        <activity
             android:name=".landlord.activity.view_property.ViewPropertyLandlordActivity"
             android:exported="false" />
         <!--
@@ -61,8 +64,8 @@
             android:exported="false" />
         <activity
             android:name=".activity.general.splash.SplashActivity"
-            android:theme="@style/SplashTheme"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
