--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RoomRental"
         tools:targetApi="31">
+
         <activity
-            android:name=".EditPropertyActivity"
+            android:name=".tenant.activity.view.ViewPropertyTenantActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.profile.edit.EditProfileActivity"
             android:exported="false" />
         <activity
             android:name=".landlord.activity.view_property.ViewPropertyLandlordActivity"
@@ -49,9 +53,6 @@
             android:label="@string/title_activity_property_map" />
         <activity
             android:name=".landlord.activity.create_property.CreatePropertyActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.profile.edit.EditProfileActivity"
             android:exported="false" />
         <activity
             android:name=".tenant.activity.main.TenantMainActivity"
