--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
@@ -24,7 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RoomRental"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ChatActivity"
+            android:exported="false" />
         <activity
             android:name=".tenant.activity.view.ViewPropertyTenantActivity"
             android:exported="false" />
