chat landlord fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,11 @@
         android:theme="@style/Theme.RoomRental"
         tools:targetApi="31">
         <activity
-            android:name=".ChatActivity"
-            android:exported="false" />
+            android:name=".comman.chat.ChatActivity"
+            android:exported="true" >
+
+
+        </activity>
         <activity
             android:name=".tenant.activity.view.ViewPropertyTenantActivity"
             android:exported="false" />
@@ -70,11 +73,13 @@
             android:name=".activity.general.splash.SplashActivity"
             android:exported="true"
             android:theme="@style/SplashTheme">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".activity.auth.forgotpassword.ForgotPasswordActivity"
