--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,17 @@
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -24,6 +29,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RoomRental"
         tools:targetApi="31">
+        <activity
+            android:name=".comman.WebCallingActivity"
+            android:exported="false" />
         <activity
             android:name=".comman.help.HelpActivity"
             android:exported="false" />
@@ -38,6 +46,9 @@
             android:exported="true" />
         <activity
             android:name=".tenant.activity.view.ViewPropertyTenantActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.auth.VerifyOtpActivity"
             android:exported="false" />
         <activity
             android:name=".activity.profile.edit.EditProfileActivity"
